--- a/src/components/style.css
+++ b/src/components/style.css
@@ -219,6 +219,7 @@ p {
   cursor: pointer;
   text-shadow: 0 0 5px rgba(234, 226, 183, .4);
   transition: all .2s;
+  text-decoration-line: underline;
 }
 
 .menu-footer-link:hover {
